# AdMob-for-Qt-Android

./: CMakeLists.txt  Main.qml  README.md  admobbridge.cpp  admobbridge.h  main.cpp
android/: AndroidManifest.xml  build.gradle
android/src/com/: AdEventHandlers.java
